fix: Rellenar el mazo si no hay más cartas